--- a/Register.html
+++ b/Register.html
@@ -215,7 +215,7 @@ img#qrCode { max-width: 100%; height: auto; }
 
   <!-- Step 1: Event Selection + Team Size -->
   <div id="step1">
-    <h3>Select Events:</h3>
+    <h3>Select Event:</h3>
     <div class="event-cards" id="eventCards">
       <div class="event-card" data-event="hackers">🔐 Hacker’s Heist</div>
       <div class="event-card" data-event="detectyx">🕵 DetectyX</div>
@@ -271,17 +271,20 @@ const EVENT_RULES = {
   violent: {2:100, 4:200, 5:200}
 };
 
-// Event selection
+// Event selection (single select)
 const eventCards = document.querySelectorAll(".event-card");
 const teamCards = document.querySelectorAll(".team-card");
 
 eventCards.forEach(c => c.addEventListener("click", () => {
-  c.classList.toggle("active");
-  const ev = c.dataset.event;
-  selectedEvents = c.classList.contains("active") ? [...selectedEvents, ev] : selectedEvents.filter(e => e!==ev);
+  // Deselect all events first
+  eventCards.forEach(card => card.classList.remove("active"));
+  // Select the clicked event
+  c.classList.add("active");
+  selectedEvents = [c.dataset.event];
   updateTeamCards();
 }));
 
+// Team size selection
 teamCards.forEach(c => c.addEventListener("click", () => {
   if(c.classList.contains("disabled")) return;
   teamCards.forEach(x => x.classList.remove("active"));
@@ -303,7 +306,7 @@ function updateTeamCards() {
 
 // Generate participant form
 function generateMemberForm(){
-  if (!selectedEvents.length || !selectedTeamSize) { alert("Select events & team size"); return; }
+  if (!selectedEvents.length || !selectedTeamSize) { alert("Select event & team size"); return; }
 
   const fields = document.getElementById("memberFields"); fields.innerHTML="";
   const branches = ["CSE(CYBERSECURITY)","CSE(DATASCIENCE)","Cse/CE","IT","IoT","Mechanical","Civil","Electronics","Electrical","AI","Robotics","B.Voc","Others"]; 
