--- a/Register.html
+++ b/Register.html
@@ -36,11 +36,11 @@
 
     <div class="event-cards" id="eventCards">
 
-      <div class="event-card" data-event="hackers">ðŸ” Hackerâ€™s Heist</div>
+      <div class="event-card" data-event="hackers">Hacker's Heist</div>
 
-      <div class="event-card" data-event="detectyx">ðŸ•µ DetectyX</div>
+      <div class="event-card" data-event="detectyx">DetectyX</div>
 
-      <div class="event-card" data-event="web3">ðŸŒ Web3 Hackathon</div>
+      <div class="event-card" data-event="web3">Web3 Hackathon</div>
 
       <div class="event-card" data-event="violent">ðŸŽ­ Nagpurâ€™s Got Violent</div>
 
@@ -98,7 +98,7 @@
 
     <input type="file" id="paymentFile" accept="image/*" required>
 
-    <button id="payButton" onclick="submitRegistration()">Iâ€™ve Completed Payment</button>
+    <button id="payButton" onclick="submitRegistration()">I've Completed Payment</button>
 
   </div>
 
