--- a/Register.html
+++ b/Register.html
@@ -42,7 +42,7 @@
 
       <div class="event-card" data-event="web3">Web3 Hackathon</div>
 
-      <div class="event-card" data-event="violent">ðŸŽ­ Nagpurâ€™s Got Violent</div>
+      <div class="event-card" data-event="violent">Nagpur's Got Violent</div>
 
     </div>
 
