--- a/Register.html
+++ b/Register.html
@@ -36,13 +36,13 @@
 
     <div class="event-cards" id="eventCards">
 
-      <div class="event-card" data-event="hackers">Hacker's Heist</div>
+      <div class="event-card" data-event="hackers">🕵️‍💻Hacker's Heist</div>
 
-      <div class="event-card" data-event="detectyx">DetectyX</div>
+      <div class="event-card" data-event="detectyx">🔍DetectyX</div>
 
-      <div class="event-card" data-event="web3">Web3 Hackathon</div>
+      <div class="event-card" data-event="web3">🌐Web3 Hackathon</div>
 
-      <div class="event-card" data-event="violent">Nagpur's Got Violent</div>
+      <div class="event-card" data-event="violent">🎤Nagpur's Got Violent</div>
 
     </div>
 
