--- a/Register.html
+++ b/Register.html
@@ -50,17 +50,17 @@
 
     <div class="team-cards" id="teamCards">
 
-      <div class="team-card" data-size="1">👤Solo</div>
+  <div class="team-card" data-size="1">👤 Solo</div>
 
-      <div class="team-card" data-size="2">👤👤Duo</div>
+  <div class="team-card" data-size="2">👥 Duo</div>
 
-      <div class="team-card" data-size="3">👤👤👤Trio</div>
+  <div class="team-card" data-size="3">👨‍👩‍👦 Trio</div>
 
-      <div class="team-card" data-size="4">👤👤👤👤Squad</div>
+  <div class="team-card" data-size="4">👨‍👩‍👦‍👦 Squad</div>
 
-      <div class="team-card" data-size="5">👤👤👤👤👤Team of Five</div>
+  <div class="team-card" data-size="5">🖐️ Team of Five</div>
 
-    </div>
+</div>
 
     <button onclick="generateMemberForm()">Next</button>
 
