--- a/Register.html
+++ b/Register.html
@@ -92,6 +92,6 @@
     </div>
   </div>
 
-  <div class="footer">© Cyberpunk 2K25 | CSE Department</div>
+  <div class="footer">© Cyberpunk 2K25 | CSE(CYBERSECURITY) Department</div>
 </body>
 </html>
