--- a/Register.html
+++ b/Register.html
@@ -1,97 +1,126 @@
+
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cyberpunk 2K25 - Registration Closed</title>
-  <style>
-    :root {
-      --bg: #05050a;
-      --neon-pink: #ff007f;
-      --neon-blue: #00eaff;
-      --text-glow: 0 0 15px var(--neon-blue);
-    }
 
-    body {
-      margin: 0;
-      padding: 0;
-      background: var(--bg);
-      color: white;
-      font-family: 'Orbitron', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-    }
+<meta charset="UTF-8">
 
-    .container {
-      text-align: center;
-      animation: fadeIn 1.5s ease-in-out;
-    }
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    h1 {
-      font-size: 3rem;
-      color: var(--neon-pink);
-      text-shadow: 0 0 20px var(--neon-pink), 0 0 40px var(--neon-blue);
-      margin-bottom: 1rem;
-    }
+<title>Cyberpunk 2K25 Registration</title>
 
-    h2 {
-      color: var(--neon-blue);
-      text-shadow: var(--text-glow);
-      font-size: 1.5rem;
-      margin-bottom: 2rem;
-    }
+<style>
 
-    .neon-border {
-      border: 2px solid var(--neon-blue);
-      box-shadow: 0 0 15px var(--neon-blue), 0 0 30px var(--neon-pink);
-      border-radius: 15px;
-      padding: 2rem 3rem;
-      display: inline-block;
-    }
+.container,body{position:relative}.container,h2,h3,h4{overflow-wrap:break-word}.container,button{box-sizing:border-box;max-width:100%}.container,button,img#qrCode{max-width:100%}body{margin:0;min-height:100vh;background:#0b0f1d;font-family:Arial,sans-serif;color:#fff;display:flex;justify-content:center;align-items:center;padding:20px;overflow-x:hidden}#stars-js{position:fixed;width:100%;height:100%;top:0;left:0;z-index:0;background:#000}.container{z-index:1;background:rgba(28,31,46,.9);padding:25px;border-radius:12px;width:900px;box-shadow:0 0 30px rgba(0,240,255,.5),0 0 45px rgba(255,45,149,.4);border:1px solid rgba(0,240,255,.4)}.event-card,.team-card{background:#2b2f47;cursor:pointer;text-align:center}h2,h3,h4{text-align:center;margin-bottom:15px;font-size:clamp(1.3em, 4vw, 1.7em);word-wrap:break-word}label{display:block;margin:10px 0 5px;font-size:.95em}input[type=email],input[type=file],input[type=number],input[type=text],select,textarea{width:100%;max-width:100%;padding:10px 12px;margin-bottom:14px;border-radius:6px;border:1px solid #00f0ff;background:#1c1f2e;color:#fff;font-size:.95em;outline:0;transition:.3s;box-sizing:border-box;box-shadow:0 0 8px rgba(0,240,255,.4)}input:hover,select:hover,textarea:hover{border-color:#ff2d95;box-shadow:0 0 10px rgba(255,45,149,.6)}input:focus,select:focus,textarea:focus{border-color:#00f0ff;box-shadow:0 0 12px rgba(0,240,255,.9)}input::placeholder,textarea::placeholder{color:#aaa;font-style:italic}select option{background:#1c1f2e;color:#fff;padding:8px}button{width:100%;padding:12px;background:linear-gradient(90deg,#00f0ff,#ff2d95);color:#000;border:none;border-radius:6px;font-size:16px;font-weight:700;cursor:pointer;transition:.3s;margin-top:10px}button:hover{opacity:.85;transform:scale(1.02)}.hidden{display:none}.event-cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:15px;margin:20px 0}.event-card{padding:15px;border-radius:12px;transition:.3s;border:2px solid transparent;font-size:.95em}.event-card.active{border:2px solid #00f0ff;background:#00f0ff;color:#000;box-shadow:0 0 12px #00f0ff}.team-cards{display:flex;flex-wrap:wrap;gap:10px;margin:15px 0 25px}.team-card{flex:1;min-width:80px;padding:12px;border-radius:10px;border:2px solid transparent;font-size:.9em}.team-card.active{border:2px solid #ff2d95;background:#ff2d95;color:#000;box-shadow:0 0 10px #ff2d95}.team-card.disabled{opacity:.4;cursor:not-allowed;pointer-events:none}.qr-container,.whatsapp-container{text-align:center;margin-top:20px}a.whatsapp-link{display:block;background:#25d366;color:#fff;padding:12px;border-radius:8px;text-decoration:none;margin:10px auto;width:85%;font-size:.95em}a.whatsapp-link:hover{background:#1da851}img#qrCode{height:auto}@media(max-width:768px){.event-cards{grid-template-columns:repeat(2,1fr)}h2,h3{font-size:1.2em}.team-card,button,input{font-size:.9em}}@media(max-width:480px){.event-cards{grid-template-columns:1fr}.team-cards{flex-direction:column}}
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+</style>
 
-    .footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.9rem;
-      color: #aaa;
-      text-shadow: 0 0 5px var(--neon-blue);
-    }
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
-    .glow-line {
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background: linear-gradient(90deg, var(--neon-pink), var(--neon-blue), var(--neon-pink));
-      animation: glowmove 3s linear infinite;
-      top: 0;
-      left: 0;
-    }
-
-    @keyframes glowmove {
-      0% { transform: translateX(-100%); }
-      100% { transform: translateX(100%); }
-    }
-  </style>
 </head>
-<body>
-  <div class="glow-line"></div>
 
-  <div class="container">
-    <div class="neon-border">
-      <h1>REGISTRATION CLOSED</h1>
-      <h2>Cyberpunk 2K25 is no longer accepting entries</h2>
-      <p>Stay tuned for next year’s event ⚡</p>
+<body>
+
+<div id="stars-js"></div>
+
+<div class="container">
+
+  <h2>CYBERPUNK 2K25 Registration</h2>
+
+  <!-- Step 1: Event Selection + Team Size -->
+
+  <div id="step1">
+
+    <h3>Select Event:</h3>
+
+    <div class="event-cards" id="eventCards">
+
+      <div class="event-card" data-event="hackers">🔐 Hacker’s Heist</div>
+
+      <div class="event-card" data-event="detectyx">🕵 DetectyX</div>
+
+      <div class="event-card" data-event="web3">🌐 Web3 Hackathon</div>
+
+      <div class="event-card" data-event="violent">🎭 Nagpur’s Got Violent</div>
+
     </div>
+
+    <h3>Choose Team Size:</h3>
+
+    <div class="team-cards" id="teamCards">
+
+      <div class="team-card" data-size="1">Solo</div>
+
+      <div class="team-card" data-size="2">Duo</div>
+
+      <div class="team-card" data-size="3">Trio</div>
+
+      <div class="team-card" data-size="4">Squad</div>
+
+      <div class="team-card" data-size="5">Team of Five</div>
+
+    </div>
+
+    <button onclick="generateMemberForm()">Next</button>
+
   </div>
 
-  <div class="footer">© Cyberpunk 2K25 | CSE(CYBERSECURITY) Department</div>
+  <!-- Step 2: Participants Info -->
+
+  <form id="registrationForm" class="hidden">
+
+    <label>Team Name:</label>
+
+    <input type="text" name="Team Name" required>
+
+    <div id="memberFields"></div>
+
+    <button type="submit">Proceed to Payment</button>
+
+  </form>
+
+  <!-- Step 3: Payment -->
+
+  <div id="qrSection" class="hidden qr-container">
+
+    <h3>Scan to Pay</h3>
+
+    <p id="amountDisplay"></p>
+
+    <img id="qrCode" src="" alt="QR Code">
+
+    <label>Transaction ID:</label>
+
+    <input type="text" id="transactionId" required>
+
+    <label>Upload Payment Screenshot:</label>
+
+    <input type="file" id="paymentFile" accept="image/*" required>
+
+    <button id="payButton" onclick="submitRegistration()">I’ve Completed Payment</button>
+
+  </div>
+
+  <!-- Step 4: WhatsApp -->
+
+  <div id="whatsappSection" class="hidden whatsapp-container">
+
+    <h3>Join WhatsApp Groups</h3>
+
+    <div id="whatsappLinks"></div>
+
+  </div>
+
+</div>
+
+<script>
+
+const _0x1d03bc=_0x1124;(function(_0x1c6c88,_0x4c1bf9){const _0x5633f4=_0x1124,_0x13a974=_0x1c6c88();while(!![]){try{const _0x20dc9e=parseInt(_0x5633f4(0x1a9))/0x1+parseInt(_0x5633f4(0x1ac))/0x2*(-parseInt(_0x5633f4(0x1bd))/0x3)+parseInt(_0x5633f4(0x19f))/0x4*(-parseInt(_0x5633f4(0x1d0))/0x5)+-parseInt(_0x5633f4(0x1c5))/0x6+parseInt(_0x5633f4(0x17b))/0x7*(parseInt(_0x5633f4(0x1d4))/0x8)+parseInt(_0x5633f4(0x17f))/0x9*(parseInt(_0x5633f4(0x1b2))/0xa)+parseInt(_0x5633f4(0x1b6))/0xb;if(_0x20dc9e===_0x4c1bf9)break;else _0x13a974['push'](_0x13a974['shift']());}catch(_0x207452){_0x13a974['push'](_0x13a974['shift']());}}}(_0x54fb,0x8ac95));let selectedEvents=[],selectedTeamSize=null,totalAmount=0x0;function _0x54fb(){const _0x56abe7=['disabled','177965pxCaXx','remove','canvas','38PTbYvE','Civil','onload','Mechanical','active','https://script.google.com/macros/s/AKfycbzs2xpnM5oRePEqo6QQwimq6iSZbRnRniHmNzudQhim-PhvsSDi0coUbwRsFts-xucwCw/exec','10dewyIS','\x22\x20required>\x0a\x0a\x20\x20\x20\x20\x20\x20<label>Branch:</label>\x0a\x0a\x20\x20\x20\x20\x20\x20<select\x20name=\x22Branch\x20','.team-card','<option\x20value=\x22','25787960CfXRbM','classList','\x22\x20required>\x0a\x0a\x20\x20\x20\x20\x20\x20<label>College:</label><input\x20type=\x22text\x22\x20name=\x22College\x20Name\x20','paymentFile','https://chat.whatsapp.com/Hn0Y56aM9kCKGey496ymTL','readAsDataURL','parse','160533oVucPS','toUpperCase','forEach','value','addEventListener','CSE(DATASCIENCE)','amountDisplay','registrationForm','5362110NVKOnX','Upload\x20screenshot\x20of\x20payment\x20done','.event-card','\x0a\x0a\x20\x20\x20\x20\x20\x20</select>\x0a\x0a\x20\x20\x20\x20\x20\x20<label>Year:</label>\x0a\x0a\x20\x20\x20\x20\x20\x20<select\x20name=\x22Year\x20','every','toDataURL','join','contains','Events','upi://pay?pa=8856813968@ptaxis&pn=Cyberpunk2K25&am=','length','755BuhXBM','text','hidden','event','1216344PCvHUW','#ffffff','whatsappLinks','Number\x20of\x20Participants','Error:\x20','POST','Submission\x20failed:\x20','35whTvGi','\x22\x20required>\x0a\x0a\x20\x20\x20\x20\x20\x20\x20\x20<option\x20value=\x22\x22>Select\x20Year</option>\x0a\x0a\x20\x20\x20\x20\x20\x20\x20\x20<option\x20value=\x221st\x20Year\x22>1st\x20Year</option>\x0a\x0a\x20\x20\x20\x20\x20\x20\x20\x20<option\x20value=\x222nd\x20Year\x22>2nd\x20Year</option>\x0a\x0a\x20\x20\x20\x20\x20\x20\x20\x20<option\x20value=\x223rd\x20Year\x22>3rd\x20Year</option>\x0a\x0a\x20\x20\x20\x20\x20\x20\x20\x20<option\x20value=\x224th\x20Year\x22>4th\x20Year</option>\x0a\x0a\x20\x20\x20\x20\x20\x20</select>\x0a\x0a\x20\x20\x20\x20\x20\x20<label>Roll\x20No:</label><input\x20type=\x22text\x22\x20name=\x22Roll\x20No\x20','preventDefault','innerHTML','1967337uCwEbx','IoT','</option>','\x22\x20required>','Cse/CE','querySelectorAll','click','toggle','src','\x22\x20target=\x22_blank\x22>Join\x20','Uploading...','drawImage','getElementById','Select\x20event\x20&\x20team\x20size','size','Electronics','innerText','transactionId','CSE(CYBERSECURITY)','height','</h4>\x0a\x0a\x20\x20\x20\x20\x20\x20<label>Full\x20Name:</label><input\x20type=\x22text\x22\x20name=\x22Full\x20name\x20of\x20Participant\x20','<a\x20class=\x22whatsapp-link\x22\x20href=\x22','dataset','result','\x20Group</a>','Others','https://chat.whatsapp.com/HT91rCKRnnV7sO3T8qrWa3','width','submit','add','\x0a\x0a\x20\x20\x20\x20\x20\x20<h4>Participant\x20','qrSection','27080RjsceI','Transaction\x20ID\x20&\x20screenshot\x20required!','https://api.qrserver.com/v1/create-qr-code/?size=220x220&data=','CSBS','memberFields','circle','append','https://chat.whatsapp.com/BorHgehQ5tx2yOei5WAGvt','step1'];_0x54fb=function(){return _0x56abe7;};return _0x54fb();}const EVENT_RULES={'hackers':{0x1:0x50,0x2:0x8c,0x3:0xb4,0x4:0xc8},'detectyx':{0x1:0x46,0x2:0x64,0x3:0x82},'web3': {0x2:150, 0x3:200, 0x4:250, 0x5:250},'violent':{0x1:50,0x2:100,0x3:150,0x4:200}},eventCards=document[_0x1d03bc(0x184)](_0x1d03bc(0x1c7)),teamCards=document[_0x1d03bc(0x184)](_0x1d03bc(0x1b4));eventCards[_0x1d03bc(0x1bf)](_0x2be65f=>_0x2be65f[_0x1d03bc(0x1c1)](_0x1d03bc(0x185),()=>{const _0x27f1c5=_0x1d03bc;eventCards[_0x27f1c5(0x1bf)](_0x1e0a9b=>_0x1e0a9b[_0x27f1c5(0x1b7)][_0x27f1c5(0x1aa)]('active')),_0x2be65f[_0x27f1c5(0x1b7)][_0x27f1c5(0x19c)]('active'),selectedEvents=[_0x2be65f[_0x27f1c5(0x195)][_0x27f1c5(0x1d3)]],updateTeamCards();})),teamCards[_0x1d03bc(0x1bf)](_0x8f98ab=>_0x8f98ab[_0x1d03bc(0x1c1)](_0x1d03bc(0x185),()=>{const _0x217ec1=_0x1d03bc;if(_0x8f98ab[_0x217ec1(0x1b7)][_0x217ec1(0x1cc)](_0x217ec1(0x1a8)))return;teamCards[_0x217ec1(0x1bf)](_0x3b4e01=>_0x3b4e01[_0x217ec1(0x1b7)][_0x217ec1(0x1aa)](_0x217ec1(0x1b0))),_0x8f98ab['classList'][_0x217ec1(0x19c)](_0x217ec1(0x1b0)),selectedTeamSize=parseInt(_0x8f98ab[_0x217ec1(0x195)][_0x217ec1(0x18d)]);}));function updateTeamCards(){const _0x5ba964=_0x1d03bc;teamCards[_0x5ba964(0x1bf)](_0xccc6f=>{const _0x4a2756=_0x5ba964,_0x280087=parseInt(_0xccc6f[_0x4a2756(0x195)][_0x4a2756(0x18d)]),_0x235b5d=selectedEvents[_0x4a2756(0x1cf)]?selectedEvents[_0x4a2756(0x1c9)](_0x3824b3=>EVENT_RULES[_0x3824b3][_0x280087]):!![];_0xccc6f[_0x4a2756(0x1b7)][_0x4a2756(0x186)](_0x4a2756(0x1a8),!_0x235b5d),!_0x235b5d&&_0xccc6f[_0x4a2756(0x1b7)][_0x4a2756(0x1cc)]('active')&&(_0xccc6f[_0x4a2756(0x1b7)][_0x4a2756(0x1aa)](_0x4a2756(0x1b0)),selectedTeamSize=null);});}function generateMemberForm(){const _0x3df99a=_0x1d03bc;if(!selectedEvents[_0x3df99a(0x1cf)]||!selectedTeamSize){alert(_0x3df99a(0x18c));return;}const _0x1970f1=document[_0x3df99a(0x18b)](_0x3df99a(0x1a3));_0x1970f1[_0x3df99a(0x17e)]='';const _0x5d8fde=[_0x3df99a(0x191),_0x3df99a(0x1c2),_0x3df99a(0x183),'IT',_0x3df99a(0x180),_0x3df99a(0x1af),_0x3df99a(0x1ad),_0x3df99a(0x18e),'Electrical','AI','Robotics&AI',_0x3df99a(0x1a2),'B.Voc',_0x3df99a(0x198)];for(let _0x475611=0x1;_0x475611<=selectedTeamSize;_0x475611++){_0x1970f1['innerHTML']+=_0x3df99a(0x19d)+_0x475611+_0x3df99a(0x193)+_0x475611+'\x22\x20required>\x0a\x0a\x20\x20\x20\x20\x20\x20<label>Email:</label><input\x20type=\x22email\x22\x20name=\x22Email\x20of\x20Participant\x20'+_0x475611+'\x22\x20required>\x0a\x0a\x20\x20\x20\x20\x20\x20<label>Phone:</label><input\x20type=\x22text\x22\x20name=\x22Phone\x20Number\x20of\x20Participant\x20'+_0x475611+_0x3df99a(0x1b8)+_0x475611+_0x3df99a(0x1b3)+_0x475611+'\x22\x20required>\x0a\x0a\x20\x20\x20\x20\x20\x20\x20\x20<option\x20value=\x22\x22>Select\x20Branch</option>\x0a\x0a\x20\x20\x20\x20\x20\x20\x20\x20'+_0x5d8fde['map'](_0x6b43c6=>_0x3df99a(0x1b5)+_0x6b43c6+'\x22>'+_0x6b43c6+_0x3df99a(0x181))[_0x3df99a(0x1cb)]('')+_0x3df99a(0x1c8)+_0x475611+_0x3df99a(0x17c)+_0x475611+_0x3df99a(0x182);}document[_0x3df99a(0x18b)](_0x3df99a(0x1a7))['classList']['add']('hidden'),document[_0x3df99a(0x18b)](_0x3df99a(0x1c4))[_0x3df99a(0x1b7)]['remove']('hidden');}function _0x1124(_0x56b397,_0x4dff5c){const _0x54fbad=_0x54fb();return _0x1124=function(_0x1124d8,_0x501a3a){_0x1124d8=_0x1124d8-0x17b;let _0x402afe=_0x54fbad[_0x1124d8];return _0x402afe;},_0x1124(_0x56b397,_0x4dff5c);}document['getElementById'](_0x1d03bc(0x1c4))[_0x1d03bc(0x1c1)](_0x1d03bc(0x19b),_0x1afb23=>{const _0x55ef4e=_0x1d03bc;_0x1afb23[_0x55ef4e(0x17d)](),totalAmount=0x0;for(let _0x3f55ed of selectedEvents){totalAmount+=EVENT_RULES[_0x3f55ed][selectedTeamSize];}document['getElementById'](_0x55ef4e(0x1c3))[_0x55ef4e(0x18f)]='Total\x20Amount:\x20₹'+totalAmount,document[_0x55ef4e(0x18b)]('qrCode')[_0x55ef4e(0x187)]=_0x55ef4e(0x1a1)+encodeURIComponent(_0x55ef4e(0x1ce)+totalAmount),document['getElementById'](_0x55ef4e(0x1c4))[_0x55ef4e(0x1b7)][_0x55ef4e(0x19c)]('hidden'),document[_0x55ef4e(0x18b)]('qrSection')['classList'][_0x55ef4e(0x1aa)](_0x55ef4e(0x1d2));});async function submitRegistration(){const _0x3bd49f=_0x1d03bc,_0x433495=document[_0x3bd49f(0x18b)]('payButton');_0x433495[_0x3bd49f(0x1a8)]=!![];const _0x327f4c=_0x433495[_0x3bd49f(0x18f)];_0x433495[_0x3bd49f(0x18f)]=_0x3bd49f(0x189);const _0x2ac56e=document['getElementById'](_0x3bd49f(0x190))[_0x3bd49f(0x1c0)],_0x36fb3a=document[_0x3bd49f(0x18b)](_0x3bd49f(0x1b9))['files'][0x0];if(!_0x2ac56e||!_0x36fb3a){alert(_0x3bd49f(0x1a0)),_0x433495[_0x3bd49f(0x1a8)]=![],_0x433495[_0x3bd49f(0x18f)]=_0x327f4c;return;}const _0x32b66b=document[_0x3bd49f(0x18b)](_0x3bd49f(0x1c4)),_0x17e7cb=new FormData(_0x32b66b);_0x17e7cb['append'](_0x3bd49f(0x1cd),selectedEvents[_0x3bd49f(0x1cb)](',\x20')),_0x17e7cb[_0x3bd49f(0x1a5)](_0x3bd49f(0x1d7),selectedTeamSize),_0x17e7cb['append']('Total\x20Amount',totalAmount),_0x17e7cb[_0x3bd49f(0x1a5)]('Enter\x20the\x20Transaction\x20ID',_0x2ac56e);const _0x43e357=new FileReader();_0x43e357['onload']=()=>{const _0x3afe92=_0x3bd49f,_0x45dca5=new Image();_0x45dca5[_0x3afe92(0x187)]=_0x43e357[_0x3afe92(0x196)],_0x45dca5[_0x3afe92(0x1ae)]=async()=>{const _0x44dcd0=_0x3afe92,_0x289bff=document['createElement'](_0x44dcd0(0x1ab));let _0x5344ea=_0x45dca5[_0x44dcd0(0x19a)],_0x336465=_0x45dca5[_0x44dcd0(0x192)];if(_0x5344ea>_0x336465)_0x5344ea>0x320&&(_0x336465*=0x320/_0x5344ea,_0x5344ea=0x320);else _0x336465>0x320&&(_0x5344ea*=0x320/_0x336465,_0x336465=0x320);_0x289bff[_0x44dcd0(0x19a)]=_0x5344ea,_0x289bff[_0x44dcd0(0x192)]=_0x336465;const _0x37bf43=_0x289bff['getContext']('2d');_0x37bf43[_0x44dcd0(0x18a)](_0x45dca5,0x0,0x0,_0x5344ea,_0x336465);const _0x2b866b=_0x289bff[_0x44dcd0(0x1ca)]('image/jpeg',0.7)['split'](',')[0x1];_0x17e7cb[_0x44dcd0(0x1a5)](_0x44dcd0(0x1c6),_0x2b866b);const _0x35985a={};_0x17e7cb[_0x44dcd0(0x1bf)]((_0x330706,_0x3c1560)=>_0x35985a[_0x3c1560]=_0x330706);try{const _0xc74d6f=await fetch(_0x44dcd0(0x1b1),{'method':_0x44dcd0(0x1d9),'body':new URLSearchParams(_0x35985a)}),_0x5317a5=await _0xc74d6f[_0x44dcd0(0x1d1)](),_0x190d3d=JSON[_0x44dcd0(0x1bc)](_0x5317a5);_0x190d3d[_0x44dcd0(0x196)]==='success'?showWhatsApp():(alert(_0x44dcd0(0x1d8)+_0x190d3d['error']),_0x433495[_0x44dcd0(0x1a8)]=![],_0x433495[_0x44dcd0(0x18f)]=_0x327f4c);}catch(_0x31c40f){alert(_0x44dcd0(0x1da)+_0x31c40f),_0x433495[_0x44dcd0(0x1a8)]=![],_0x433495[_0x44dcd0(0x18f)]=_0x327f4c;}};},_0x43e357[_0x3bd49f(0x1bb)](_0x36fb3a);}function showWhatsApp(){const _0x444541=_0x1d03bc;document[_0x444541(0x18b)](_0x444541(0x19e))[_0x444541(0x1b7)][_0x444541(0x19c)](_0x444541(0x1d2));const _0x41167d={'hackers':'https://chat.whatsapp.com/JK7PSA0NostIXx6hekCII9','detectyx':_0x444541(0x199),'web3':_0x444541(0x1ba),'violent':_0x444541(0x1a6)},_0x5d4653=document['getElementById'](_0x444541(0x1d6));_0x5d4653[_0x444541(0x17e)]='',selectedEvents[_0x444541(0x1bf)](_0x2c5e73=>{const _0x4e5b84=_0x444541;_0x41167d[_0x2c5e73]&&(_0x5d4653[_0x4e5b84(0x17e)]+=_0x4e5b84(0x194)+_0x41167d[_0x2c5e73]+_0x4e5b84(0x188)+_0x2c5e73[_0x4e5b84(0x1be)]()+_0x4e5b84(0x197));}),document[_0x444541(0x18b)]('whatsappSection')[_0x444541(0x1b7)][_0x444541(0x1aa)]('hidden');}particlesJS('stars-js',{'particles':{'number':{'value':0xc8,'density':{'enable':!![],'value_area':0x320}},'color':{'value':[_0x1d03bc(0x1d5),'#00f0ff','#ff2d95']},'shape':{'type':_0x1d03bc(0x1a4)},'opacity':{'value':0.8,'random':!![],'anim':{'enable':!![],'speed':0x1,'opacity_min':0.3,'sync':![]}},'size':{'value':0x2,'random':!![]},'line_linked':{'enable':![]}},'interactivity':{'events':{'onhover':{'enable':![]},'onclick':{'enable':![]}}},'retina_detect':!![]});
+</script>
+
 </body>
+
+
 </html>
